--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "start": "meteor run"
   },
+  "engines": {
+    "node": "8.2.1"
+  },
   "dependencies": {
     "babel-runtime": "^6.20.0",
     "chai": "^4.1.1",
